--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "twitch.tv feaniks channel bot and others",
   "main": "out/index.js",
   "dependencies": {
+    "@types/node": "^12.7.2",
     "@types/tmi.js": "^1.4.0",
     "tmi.js": "^1.4.5",
     "typescript": "^3.4.5"
