--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "twitch-bots",
   "version": "1.0.0",
   "description": "twitch.tv feaniks channel bot and others",
-  "main": "out/index.js",
+  "main": "main/index.ts",
   "dependencies": {
+    "@types/express": "^4.17.1",
     "@types/node": "^12.7.2",
     "@types/tmi.js": "^1.4.0",
+    "express": "^4.17.1",
     "tmi.js": "^1.4.5",
     "typescript": "^3.4.5"
   },
   "devDependencies": {},
+  "engines": {
+    "node": "8.x"
+  },
   "scripts": {
-    "start": "node out/index.js",
+    "start": "ts-node main/index.ts",
     "build": "tsc",
     "test": "test"
   },
