--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^12.7.2",
     "@types/tmi.js": "^1.4.0",
     "express": "^4.17.1",
+    "lol-plus": "^0.0.10",
     "tmi.js": "^1.8.5",
     "ts-node": "^10.8.0",
     "typescript": "^3.4.5"
